--- a/client/public/style.css
+++ b/client/public/style.css
@@ -83,6 +83,35 @@ html {
     box-sizing: inherit;
 }
 
+button {
+  border: none;
+  margin: 0;
+  padding: 0;
+  width: auto;
+  overflow: visible;
+
+  background: transparent;
+
+  /* inherit font & color from ancestor */
+  color: inherit;
+  font: inherit;
+
+  /* Normalize `line-height`. Cannot be changed from `normal` in Firefox 4+. */
+  line-height: normal;
+
+  /* Corrects font smoothing for webkit */
+  -webkit-font-smoothing: inherit;
+  -moz-osx-font-smoothing: inherit;
+
+  /* Corrects inability to style clickable `input` types in iOS */
+  -webkit-appearance: none;
+}
+
+button::-moz-focus-inner {
+  border: 0;
+  padding: 0;
+}
+
 /* Defaults */
 
 article,
@@ -140,19 +169,16 @@ input[type="search"],
 textarea,
 select {
     border: none;
-    background-color: #e4e4e4;
-    padding: 12px 10px;
-    padding: 1.2rem 1rem;
+    background-color: none;
+    padding: 0;
+    margin: 0;
     font: inherit;
-    margin: 6px 0;
-    margin: 0.6rem 0;
-    width: 100%;
-    line-height: 1.6;
-    height: 4.6rem;
+    line-height: 1.2;
     -webkit-appearance: none;
     -moz-appearance: none;
     appearance: none;
     -webkit-border-radius: 0;
+    background-color: inherit;
 }
 
 textarea {
@@ -340,4 +366,122 @@ h1 {
   width: 60%;
   background: #147aff;
   border-radius: inherit;
+}
+
+/* Todo Item */
+
+.todo-item {
+  display: flex;
+  align-items: center;
+  flex-wrap: wrap;
+  margin-top: 6px;
+}
+
+.todo-item input[type="checkbox"] {
+  display: none;
+}
+
+.todo-check {
+  box-sizing: border-box;
+  border-radius: 3px;
+  margin-right: 10px;
+  height: 12px;
+  width: 12px;
+  border: 2px solid #333;
+  position: relative;
+  cursor: pointer;
+  transition: background-color .1s ease-out;
+}
+
+.todo-check::before,
+.todo-check::after {
+  content: '';
+  top: 6px;
+  left: -2px;
+  display: block;
+  position: absolute;
+  height: 3px;
+  width: 6px;
+  background-color: white;
+  transform: rotate(45deg) scaleX(0);
+  transform-origin: right center;
+  border-radius: 1px;
+  transition: transform .1s ease-out;
+}
+
+.todo-check::after {
+  left: 2px;
+  width: 9px;
+  transform: rotate(-45deg) scaleX(0);
+  transform-origin: left center;
+  transition: transform .15s ease-out;
+}
+
+input:checked ~ .todo-check {
+  background-color: #333;
+}
+
+input:checked ~ .todo-check::before {
+  transform: rotate(45deg) scaleX(1);
+}
+
+input:checked ~ .todo-check::after {
+  transform: rotate(-45deg) scaleX(1);
+}
+
+
+.item-name {
+  display: block;
+  font-size: 16px;
+  font-weight: 600;
+  line-height: 1.2em; 
+  text-decoration: none;
+  background-color: blue;
+}
+
+input:checked ~ .item-name {
+  text-decoration: line-through;
+}
+
+.item-due {
+  display: block;
+  color: darkgrey;
+  font-size: 10px;
+  margin-left: 22px;
+  overflow: hidden;
+  height: 12px;
+  transition: height .2s;
+}
+
+input:checked ~ .item-due {
+  height: 0;
+}
+
+.edit-button {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  height: 20px;
+  width:30px;
+  margin-left: auto;
+  border-radius: 3px;
+  transition: background-color .2s ease;
+}
+
+.edit-button:hover {
+  background-color: darkgrey;
+}
+
+.edit-button svg {
+  height: 4px;
+  width: 16px;
+}
+
+.edit-button-symbol {
+  fill: grey;
+}
+
+.break {
+  flex-basis: 100%;
+  height: 0;
 }
