--- a/client/public/style.css
+++ b/client/public/style.css
@@ -326,10 +326,11 @@ h1 {
   background: lightgrey;
   border-radius: 20px;
   padding: 20px;
+  min-height: 250px;
 }
 
 .todo-list-content {
-  min-height: 210px;
+  height: 100%;
   display: flex;
   flex-direction: column;
 }
@@ -369,7 +370,12 @@ h1 {
   border-radius: inherit;
 }
 
+.item-list {
+  margin-bottom: 20px;
+}
+
 /* Todo Item */
+
 
 .todo-item {
   display: flex;
@@ -445,7 +451,6 @@ input:checked ~ .item-name {
 
 .item-due {
   display: block;
-  color: darkgrey;
   font-size: 10px;
   margin-left: 22px;
   overflow: hidden;
@@ -484,4 +489,67 @@ input:checked ~ .item-due {
 .break {
   flex-basis: 100%;
   height: 0;
+}
+
+/* ItemEditor */
+
+.todo-list-content > form {
+  margin-top: auto;
+  display: flex;
+  align-items: center;
+  flex-wrap: wrap;
+  background-color: blue;
+  padding: 6px;
+  border-radius: 6px;
+  height: 60px;
+  width: 100%;
+}
+
+.todo-list-content > form input {
+  display: block;
+  font-family: inherit;
+  color: inherit;
+  background-color: inherit;
+  border-radius: 3px;
+  border: none;
+  padding: 0 6px;
+  background-color: green;
+}
+
+.fiel-wrapper {
+  background-color: yellow;
+  height: 100%;
+}
+
+.todo-list-content > form input:focus {
+  outline: none;
+}
+
+.new-todo-name {
+  font-size: 14px;
+  font-weight: 600;
+  height: 22px;
+  width: calc(100% - 22px - 40px);
+}
+
+.button-wrapper {
+  margin-left: auto;
+  height: 100%;
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
+  align-self: flex-start;
+}
+
+.new-todo-due {
+  font-size: 12px;
+  font-weight: 400;
+  margin-left: 22px;
+  width: auto;
+  height: 18px;
+  line-height: 18px;
+}
+
+.todo-list-content > form > .todo-check {
+  cursor: default;
 }
